# capsuleers.ia

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  RUNNING.md  SECURITY.md  THIRD_PARTY.md  docker-compose.yml
.github/: dependabot.yml
desktop/: README.md  build-index.mjs  electron-builder.linux-cuda.yml  electron-builder.linux-vulkan.yml  electron-builder.win-cuda.yml  electron-builder.win-vulkan.yml  electron-builder.yml  export_index.py  gen_icon.py  package-lock.json  package.json  rag.mjs  test-gpu.mjs
docs/: architecture.md  data-sources.md
eval/: README.md  run_eval.py  validate_dataset.py
ingestion/: README.md  pyproject.toml
ingestion/capsuleers_ingestion/: __init__.py  chunk.py  config.py  embed.py  embedcache.py  htmltext.py  index.py  missions_update.py  models.py  run.py  store.py  update.py  wiki_update.py  wormhole_update.py
ingestion/capsuleers_ingestion/missions/: eve_survival.py
ingestion/capsuleers_ingestion/sde/: __init__.py  common.py  dogma.py  download.py  facilities.py  fitlookup.py  industry.py  parse.py  sites.py  social.py  source.py  universe.py  wormholes.py
ingestion/capsuleers_ingestion/web/: riley.py
ingestion/capsuleers_ingestion/wiki/: api.py  recentchanges.py  scrape.py  sources.py
ops/: README.md  capsuleers-missions-update.service  capsuleers-missions-update.timer  capsuleers-sde-update.service  capsuleers-sde-update.timer  capsuleers-wiki-update.service  capsuleers-wiki-update.timer  capsuleers-wormhole-update.service  capsuleers-wormhole-update.timer  missions-update.sh  (+5 more)
(+24 files in other folders)
